--- a/meine_projekte.html
+++ b/meine_projekte.html
@@ -47,7 +47,7 @@
                     <input type="radio" name="tab" id="tab2">
                     <label for="tab2">
                         <h4>02</h4>
-                        <h5>Portfolio-Website (in Eigeninitiative) - nicht vergessen code in repository zu aktualisieren</h5>
+                        <h5>Portfolio-Website (in Eigeninitiative)</h5>
                     </label>
                     <div class="tab-content">
                         <p>
